добавление подключения к базе через config

--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -53,7 +53,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="../css/script1.js"></script>
+<script src="../script/script.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         showList(0); // Вызов функции showList(0) при загрузке страницы
